# trimeta

./: CMakeLists.txt  README.md
include/trimeta/: clock.hpp  unit_primitives.hpp
include/trimeta/alu/: adder.hpp  alu.hpp
include/trimeta/detail/: generic_primitives.hpp
include/trimeta/lib/: and.hpp  decoder.hpp  mux.hpp  not.hpp  or.hpp
include/trimeta/memory/: dff.hpp  ram.hpp  register.hpp
test/: CMakeLists.txt  main.cpp  test_adder.cpp  test_alu.cpp  test_assembling.cpp  test_memory.cpp
